--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -20,4 +20,13 @@
         android:textColor="#fff"
         android:textSize="16sp"
         />
+    <Button
+        android:id="@+id/nav_button"
+        android:layout_height="30dp"
+        android:layout_width="30dp"
+        android:layout_margin="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/back"
+        />
 </RelativeLayout>
